chore: refactor java-fn